Contact Us Dark Mode and Page Fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2111,8 +2111,8 @@ h1 {
 
 .contact-wrapper {
     font-family: 'Poppins', sans-serif;
-    background: #f5f5f5;
-    color: #000000;
+    background-color: var(--bg-colour);
+    color: var(--text-colour);
     padding: 50px 20px;
     text-align: center;
 }
@@ -2127,15 +2127,13 @@ h1 {
     font-size: 3rem;
     font-weight: bold;
     text-transform: uppercase;
-    color: #000000;
+    color: var(--text-colour);
 }
 
 .contact-header p {
     font-size: 1.2rem;
     opacity: 0.8;
 }
-
-/* Contact Container */
 
 .contact-container {
     display: flex;
@@ -2150,12 +2148,20 @@ h1 {
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
 }
 
-/* Contact Details */
 
-.contact-details {
+.contact-page-details {
     flex: 1;
     min-width: 300px;
     padding-right: 20px;
+    font-family: Arial, sans-serif;
+    width: 650px;
+    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 5px;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .contact-us-brand {
@@ -2165,19 +2171,19 @@ h1 {
 
 }
 
-.contact-details h2 {
+.contact-page-details h2 {
     font-size: 2rem;
     margin-bottom: 10px;
     color: #4d4d4d;
 }
 
-.contact-details ul {
+.contact-page-details ul {
     list-style: none;
     padding: 0;
     font-size: 1.2rem;
 }
 
-.contact-details li {
+.contact-page-details li {
     margin-bottom: 10px;
 }
 
